--- a/style.css
+++ b/style.css
@@ -6,15 +6,23 @@
 :root {
     --background-color: black;
     --text-color: white;
+    scroll-behavior: smooth;
 }
 
 body {
     background-color: var(--background-color);
     color: var(--text-color);
     font-family: CustomFont, sans-serif;
-    margin: 0;
-    padding: 0;
     padding-top: 2rem;
+}
+
+.landing-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: calc(100vh - 2rem);
 }
 
 .home {
@@ -31,8 +39,6 @@ body {
 }
 
 .home h1 {
-    margin: 0;
-    padding: 0;
     font-size: 0.8rem;
 }
 
@@ -43,11 +49,10 @@ body {
 }
 
 .links {
-    display: flex;
+    display: grid;
     justify-content: center;
     list-style: none;
-    flex-wrap: wrap;
-    margin: 0;
+    grid-template-columns: repeat(2, 1fr);
     padding: 0;
 }
 
@@ -84,6 +89,21 @@ body {
     content: url('assets/band.webp');
 }
 
+.artworks {
+    display: grid;
+    margin-top: calc(100vh - 2rem);
+    position: relative;
+    gap: 1rem;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    background-color: var(--background-color);
+    padding: 1rem;
+}
+
+.artworks img {
+    width: 100%;
+}
+
 @media screen and (min-width: 768px) {
     .home {
         margin-bottom: 7rem;
@@ -98,11 +118,19 @@ body {
         font-size: 1.2rem;
     }
 
+    .links {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
     .link img {
         width: 28rem;
     }
 
     .link h2 {
         font-size: 1.2rem;
+    }
+
+    .artworks {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
