--- a/style.css
+++ b/style.css
@@ -18,7 +18,14 @@ body {
 
 .header-not-at-top {
     header {
-        filter: invert(1);
+        img {
+            filter: invert(1);
+        }
+
+        h1,
+        p {
+            color: black;
+        }
     }
 }
 
@@ -31,18 +38,18 @@ header {
     top: 2rem;
     width: 100%;
     z-index: 1;
-    transition: filter 0.5s;
 
 
     img {
         width: 5rem;
         margin-bottom: 1rem;
+        transition: filter 0.5s;
     }
 
     h1,
     p {
         font-size: 0.8rem;
-
+        transition: color 0.5s;
     }
 }
 
@@ -107,8 +114,16 @@ header {
     background-color: var(--artworks-background-color);
     padding: 1rem;
 
-    img {
-        width: 100%;
+    ul {
+        padding: 0;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        img {
+            width: 100%;
+        }
     }
 }
 
