--- a/style.css
+++ b/style.css
@@ -21,8 +21,10 @@ header {
     flex-direction: column;
     align-items: center;
     text-transform: uppercase;
-    position: sticky;
+    position: fixed;
     top: 2rem;
+    left: 0;
+    right: 0;
     z-index: 1;
     mix-blend-mode: difference;
 }
@@ -90,9 +92,27 @@ header p {
     content: url('assets/band.webp');
 }
 
+@media screen and (hover: none) {
+    .link--artworks img {
+        content: url('assets/artworks.webp');
+    }
+
+    .link--book img {
+        content: url('assets/book.webp');
+    }
+
+    .link--noises img {
+        content: url('assets/noises.webp');
+    }
+
+    .link--band img {
+        content: url('assets/band.webp');
+    }
+}
+
 .artworks {
     display: grid;
-    margin-top: 100vh;
+    margin-top: 100dvh;
     position: relative;
     gap: 1rem;
     grid-template-columns: 1fr;
