--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header p {
 .links {
     position: fixed;
     top: max(50%, 470px);
-    transform: translateY(-50%);
+    transform: translateY(-25%);
     width: 100%;
     display: flex;
     justify-content: center;
@@ -89,6 +89,14 @@ header p {
     content: url('assets/noises.webp');
 }
 
+.link--insta:hover img {
+    content: url('assets/Insta.gif');
+}
+
+.link--shop:hover img {
+    content: url('assets/Shop.gif');
+}
+
 .link--whatido:hover img {
     content: url('assets/whatido.webp');
 }
@@ -124,7 +132,7 @@ header p {
     }
 
     .links ul {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 
     .link img {
