--- a/style.css
+++ b/style.css
@@ -44,8 +44,7 @@ header p {
 
 .links {
     position: fixed;
-    top: max(50%, 470px);
-    transform: translateY(-25%);
+    top: 360px;
     width: 100%;
     display: flex;
     justify-content: center;
