--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header p {
 
 .links {
     position: fixed;
-    top: 360px;
+    top: 320px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -71,7 +71,7 @@ header p {
 }
 
 .link h2 {
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: var(--text-color);
     text-transform: uppercase;
 }
@@ -128,6 +128,10 @@ header p {
     header h1,
     header p {
         font-size: 1rem;
+    }
+
+    .links {
+        top: 360px;
     }
 
     .links ul {
